--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Audio</title>
+    <title>Leo's burger</title>
     <link rel="icon" href = "Icon.png">
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -15,15 +15,11 @@
         <h1>Big Audio</h1>
         <form action="" id="contactForm">
             <div class="inputBox">
-                <input type="text" id="name" placeholder="Seu e-mail" />
+                <input type="text" id="name" placeholder="Seu pedido" />
             </div>
 
             <div class="inputBox">
-                <input type="email" id="emailid" placeholder="Sua senha" />
-            </div>
-
-            <div class="inputBox">
-                <textarea id="msgContent" cols="30" rows="10" placeholder="Mensagem"></textarea>
+                <textarea id="msgContent" cols="30" rows="10" placeholder="Observação"></textarea>
             </div>
 
             <div class="inputBox">
