--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <h1>Big Audio</h1>
+        <h1>Leo's Burger</h1>
         <form action="" id="contactForm">
             <div class="inputBox">
                 <input type="text" id="name" placeholder="Seu pedido" />
