--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="inputBox">
                 <input type="text" id="name" placeholder="Seu pedido" />
             </div>
-
+   <div class="inputBox">
+                <input type="text" id="emailid" placeholder="Seu nome" />
+            </div>
             <div class="inputBox">
                 <textarea id="msgContent" cols="30" rows="10" placeholder="Observação"></textarea>
             </div>
